syntax = "proto3";
package PlayerMsg;

message Msg_PlayerInput{
    float mousePosX = 1;
    float mousePosY = 2;
    float inputUVX = 3;
    float inputUVY = 4;
    bool isInputFire=5;
    int32 skillId = 6;
    bool isSpeedUp = 7;
    int32 tick = 8;
}

message Msg_FrameInput{
    int32 tick =1;
    repeated Msg_PlayerInput inputs = 2;
}

